syntax = "proto3";

package spine.test.protobuf;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.protobuf";
option java_outer_classname = "FieldPathsTestProto";
option java_multiple_files = true;

import "google/protobuf/any.proto";

message StringHolder {
    string val = 1;
}

message StringHolderHolder {
    StringHolder holder = 1;
}

message AnyHolder {
    google.protobuf.Any val = 1;
}

message GenericHolder {
    StringHolder str = 1;
    StringHolderHolder holder_holder = 2;
    AnyHolder any = 3;
    GenericHolder generic = 4;
    enum Count {
        ZERO = 0;
        ONE = 1;
        TWO = 2;
        THREE = 3;
    }
    Count count = 5;
    int32 size = 6;
}
